--- a/switch_pro/style.css
+++ b/switch_pro/style.css
@@ -54,11 +54,12 @@ form button{
     padding: 15px;
     font-weight: 500;
 }
-.ans{
+input .ans{
     margin-top: 20px;
     font-size: 15px;
-    padding: 15px;
+    padding: 20px;
     font-weight: 500;
+    color: #3210d9;
 }
 .hidden{
     display: none;
