--- a/switch_pro/style.css
+++ b/switch_pro/style.css
@@ -1,13 +1,15 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
 }
-body{
+
+body {
     display: flex;
     justify-content: center;
 }
-.main{
+
+.main {
     background-color: rgb(49, 66, 73);
     width: 500px;
     height: auto;
@@ -19,51 +21,48 @@ body{
 }
 
 
-form{
+form {
     text-align: center;
 }
 
-form input{
+form input {
+    margin-block: 15px;
     width: 300px;
-    margin-block: 10px;
     padding: 20px 16px;
     border-radius: 10px;
     border: none;
 }
-form button{
-    padding: 16px 10px;
+
+form button {
     width: 100px;
-    font-weight: 700;
-    border-radius:40px;
+    padding: 16px 10px;
+    font-weight: 800;
+    border-radius: 40px;
     border: none;
+    color: rgb(7, 13, 88);
 }
 
-#result{
+#result {
     width: 100%;
     text-align: center;
     color: white;
 }
 
-#result span{
+#result span {
     font-size: 30px;
 }
 
-.box-button button{
+.box-button button {
     margin-top: 20px;
     font-size: 15px;
     padding: 15px;
     font-weight: 500;
 }
-input .ans{
-    margin-top: 20px;
-    font-size: 15px;
-    padding: 20px;
-    font-weight: 500;
-    color: #3210d9;
-}
-.hidden{
+
+.hidden {
     display: none;
 }
-.active{
-    display:block
+
+.active {
+    display: block
 }
