--- a/switch_pro/style.css
+++ b/switch_pro/style.css
@@ -66,3 +66,14 @@ form button {
 .active {
     display: block
 }
+/* #ans{
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 26px;
+    border-radius: 5px;
+    margin: 16px auto;
+} */
