--- a/slide/css/style.css
+++ b/slide/css/style.css
@@ -40,3 +40,13 @@ body{
 .next {
     right: 10px;
 }
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
