--- a/slide/css/style.css
+++ b/slide/css/style.css
@@ -5,17 +5,23 @@
 body{
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    margin: 0;
 }
 .slider{
-    width: 800px;
-    height: 500px;
-    margin: 20px;
+    width: 100vw;
+    height: 100vh;
     position: relative;
+    overflow: hidden;
 
 }
-.slider .slider-item img{
-    width: 100%;
-    height: 100%;
+ .slider-item img{
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
 
 }
 .d-none{
@@ -23,7 +29,8 @@ body{
 }
 .active{
     display: block;
-}.prev, .next {
+}
+.prev, .next {
     cursor: pointer;
     padding: 10px;
     position: absolute;
@@ -31,8 +38,14 @@ body{
     transform: translateY(-50%);
     border: none;
     font-size: 18px;
+    background: none;
+    font-size: 2rem;
 }
-
+i:hover{
+    /* background-color: blue; */
+    /* transform: translateY(-50%) scale(1.1); */
+    color: rgb(233, 4, 85);
+}
 .prev {
     left: 10px;
 }
@@ -40,7 +53,29 @@ body{
 .next {
     right: 10px;
 }
+.indicator-container {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 8px;
+}
 
+.dot {
+    width: 12px;
+    height: 12px;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.active-dot {
+    background: #6d4c41;
+    width: 14px;
+    height: 14px;
+}
 .fade {
     animation-name: fade;
     animation-duration: 1.5s;
