--- a/slide/css/style.css
+++ b/slide/css/style.css
@@ -44,7 +44,7 @@ body{
 i:hover{
     /* background-color: blue; */
     /* transform: translateY(-50%) scale(1.1); */
-    color: rgb(233, 4, 85);
+    color: rgb(93, 7, 37);
 }
 .prev {
     left: 10px;
@@ -53,28 +53,41 @@ i:hover{
 .next {
     right: 10px;
 }
-.indicator-container {
+
+.indicator {
+    position: absolute;
+    bottom: 10px;
+    bottom: 85%;
+    transform: translateY(-50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 5px 10px;
+    margin: 10px;
+    border-radius: 10px;
+    font-size: 16px;
+}
+/*dot*/
+.dots {
+    text-align: center;
     position: absolute;
     bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
-    display: flex;
-    gap: 8px;
 }
 
 .dot {
-    width: 12px;
-    height: 12px;
-    background: rgba(255, 255, 255, 0.5);
-    border-radius: 50%;
     cursor: pointer;
-    transition: background 0.3s ease;
+    height: 12px;
+    width: 12px;
+    margin: 0 5px;
+    background-color:rgb(71, 49, 57);
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.3s ease-in-out;
 }
 
-.active-dot {
-    background: #6d4c41;
-    width: 14px;
-    height: 14px;
+.dot.active {
+    background-color: #ffffff;
 }
 .fade {
     animation-name: fade;
