--- a/scroll-header/style.css
+++ b/scroll-header/style.css
@@ -12,11 +12,11 @@ header {
     color: white;
     text-align: center;
     padding: 15px 0;
-    transition: top 0.5s ease-in-out;
+    transition: top 0.4s ease-in-out;
 }
 
 .content {
-    height: 2000px; 
+    height: 2000px; /* Just to enable scrolling */
     background: linear-gradient(white, lightgray);
-    padding-top: 80px; 
+    padding-top: 80px; /* To prevent content from hiding under the header */
 }
